# them-tube

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  index.html
app/: main.py  pyproject.toml  test.py
app/api/v1/routers/: health.py  stream.py  user.py  video.py
app/core/: config.py  mongo_storage.py  storage.py  video_processing.py
app/core/authentication/: auth_middleware.py  auth_token.py  hashing.py  role.py
app/schemas/: base.py  health.py  user.py  video.py
app/templates/: index.html
